# langchain-Study

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: file_agent.py
app/api/routes/: agents.py
app/core/: settings.py
app/data/: teste.csv
app/service/: azure_service.py
app/tests/: test_azure.py
app/tools/: custom_tools.py  file_tools.py
