[project]
name = "langchain-csv-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.27",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "tabulate>=0.9.0",
]
